k8s/prod/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-blue
  namespace: prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: test
      color: blue

  template:
    metadata:
      labels:
        app: test
        color: blue

    spec:
      containers:
        - name: test
          image: ghcr.io/apulatjonov/mytestapp:dev
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
