k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: prod

spec:
  selector:
    app: test
    color: blue

  ports:
    - port: 80
      targetPort: 8080
